# babycare-llm-rag

./: .gitignore  README.md  README_FULLSTACK.md  app.py  babycare.db  main.py  pyproject.toml  requirements.txt  start_backend.sh  styles.css  vercel.json
api/: index.py  requirements.txt
babycare/: __init__.py  basic_auth.py  chat_flow.py  chat_history.py  config.py  conversation_storage.py  database.py  embeddings.py  integrated_chatbot.py  langsmith_monitor.py  rag_system.py  simple_vector_store.py  utils.py  vector_store.py
docs/: ARCHITECTURE.md
frontend/: README.md  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: ChatHistory.tsx  ChatInput.tsx  DocumentViewer.tsx  DocumentViewerDemo.tsx  LoginButton.tsx  LoginForm.tsx  MessageBubble.tsx  UserMenu.tsx  WelcomeScreen.tsx
frontend/contexts/: AuthContext.tsx
