[project]
name = "babycare"
version = "0.1.0"
description = "A specialized LLM chatbot for baby care knowledge using LangChain and LangGraph with RAG"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.2.70",
    "langchain>=0.2.1",
    "langchain_openai>=0.1.7",
    "python-dotenv>=1.0.0",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.2.1",
    "pathlib>=1.0.1",
    "pinecone-client>=4.1.0",
    "langchain-pinecone>=0.1.2",
    "langchain-community==0.2",
    "sentence-transformers>=2.6.0",
    "langsmith>=0.1.17",
    "gradio==5.49.1"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
