[project]
name = "babycare"
version = "0.1.0"
description = "A specialized LLM chatbot for baby care knowledge using LangChain and LangGraph with RAG"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio==5.49.1"
    "langchain>=0.2.1",
    "langchain-community==0.2",
    "langchain_openai>=0.1.7",
    "langchain-pinecone>=0.1.2",
    "langgraph>=0.2.70",
    "langsmith>=0.1.17",
    "pathlib>=1.0.1",
    "pinecone-client>=4.1.0",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.2.1",
    "python-dotenv>=1.0.0",
    "sentence-transformers>=2.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
